# kanton-skewers

./: .gitignore  LICENSE  README.md  kanton_skewers.py  pyproject.toml
kanton_skewers_app/: __init__.py  application.py  asset_resolver.py  canton_catalog.py  cli.py  crest_downloader.py  flag_downloader.py  http_client.py  kanton_skewers_pdf_generator.py  pdf_motif_renderer.py  variant_set_builder.py
