[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanton-skewers"
version = "1.0.0"
description = "Swiss canton skewer-label toolkit (download assets and generate PDF sets)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Kanton Skewers Project" }
]
dependencies = [
  "reportlab>=4.0",
  "svglib>=1.5",
  "Pillow>=10.0",
  "certifi>=2024.2.2",
  "pypdf>=6.0"
]

[project.scripts]
kanton-skewers = "kanton_skewers_app.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["kanton_skewers_app*"]
